--- a/dicam.html
+++ b/dicam.html
@@ -511,7 +511,7 @@
                 episodeList: [
                     {
                     ep_num: 1, title: 'Full Movie: The Final Battle', thumbnail: 'https://d2u0ktu8omkpf6.cloudfront.net/fe98780abf0f8b44b7febdc30132909cb0c30db862400714.jpg',
-                    servers: { 'VidStream': 'https://multiembed.mov/?video_id=tt32820897', 'MegaCloud': 'https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1', 'StreamTape': 'https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1' },
+                    servers: { 'VidStream': 'https://multiembed.mov/?video_id=tt32820897', 'MegaCloud': 'https://multiembed.mov/?video_id=tt32820897', 'StreamTape': 'https://multiembed.mov/?video_id=tt32820897' },
                     downloads: { '1080p': '#', '720p': '#', '480p': '#' }
                     }
                 ],
