kjn8 & lotm comp

--- a/home.html
+++ b/home.html
@@ -349,7 +349,7 @@
                 <a href="index.html" class="logo">Ani<span>kan</span></a>
                 <p>Anikan is a free anime streaming website where you can watch your favorite anime online in high quality.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-telegram"></i></a><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#"><i class="fab fa-telegram"></i></a><a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-links">
