index search add

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
                 <div class="top-searches">
                     <p>Top search:</p>
                     <div class="search-links">
-                        <a href="#">Demon Slayer: Kimetsu no ...</a>
-                        <a href="#">Chainsaw Man the Movie: R...</a>
+                        <a href="demonslayer.html">Demon Slayer: Kimetsu no ...</a>
+                        <a href="chainsawmanmovie1.html">Chainsaw Man the Movie: R...</a>
                         <a href="#">One Piece,</a>
-                        <a href="#">Demon Slayer: Kimetsu no ...</a>
-                        <a href="#">Kaiju No. 8 Season 2,</a>
+                        <a href="dicam.html">Demon Slayer: Kimetsu no ...</a>
+                        <a href="kaijuno8.html">Kaiju No. 8 Season 2,</a>
                         <a href="#">The Fragrant Flower Bloom...</a>
-                        <a href="#">Demon Slayer: Mt. Natagu...</a>
+                        <a href="dicam.html">Demon Slayer: Mt. Natagu...</a>
                         <a href="#">Farming Life in Another Wor...</a>
                         <a href="gachiakuta.html">Gachiakuta,</a>
                         <a href="#">Attack on Titan, ...</a>
