--- a/movies.html
+++ b/movies.html
@@ -117,7 +117,7 @@
 <body>
 
     <header class="main-header">
-        <a href="#" class="logo">Ani<span>kan</span></a>
+        <a href="home.html" class="logo">Ani<span>kan</span></a>
         <nav class="main-nav"><a href="home.html">Home</a><a href="categories.html">Browse</a><a href="#">Trending</a><a href="#" class="active">Movies</a></nav>
         <div class="header-actions">
             <div class="search-bar">
