--- a/home.html
+++ b/home.html
@@ -573,9 +573,9 @@
     </main>
 
     <nav class="bottom-nav">
-        <a href="#" class="bottom-nav-item active">
+        <a href="https://dramakan.netlify.app/" class="bottom-nav-item">
             <i class="fas fa-home"></i>
-            <span>Home</span>
+            <span>Dramakan</span>
         </a>
         <a href="#" class="bottom-nav-item">
             <i class="fas fa-compass"></i>
@@ -585,9 +585,9 @@
             <i class="fas fa-fire"></i>
             <span>Trending</span>
         </a>
-        <a href="#type-section" class="bottom-nav-item">
-            <i class="fas fa-film"></i>
-            <span>Movies</span>
+        <a href="#" class="bottom-nav-item active">
+            <i class="fas fa-home"></i>
+            <span>Anikan</span>
         </a>
     </nav>
     <footer class="main-footer">
