--- a/home.html
+++ b/home.html
@@ -371,15 +371,14 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                text-decoration: none;
                 color: var(--color-text-muted);
-                font-size: 0.7rem;
+                font-size: 1.75rem;
                 transition: color 0.3s ease;
                 padding: 5px;
-                min-width: 60px;
+                flex: 1; 
             }
             .bottom-nav-item i {
-                font-size: 1.2rem;
+                font-size: 2.5rem;
                 margin-bottom: 3px;
             }
             .bottom-nav-item:hover, .bottom-nav-item.active {
