--- a/home.html
+++ b/home.html
@@ -531,7 +531,7 @@
 
     <header class="main-header">
         <a href="index.html" class="logo">Ani<span>kan</span></a>
-        <nav class="main-nav"><a href="#" class="active">Home</a><a href="categories.html">Browse</a><a href="#trending-section">Trending</a><a href="movies.html">Movies</a><a href="https://dramakan.netlify.app/">Dramakan</a></nav>
+        <nav class="main-nav"><a href="#" class="active">Home</a><a href="categories.html">Browse</a><a href="#trending-section">Trending</a><a href="movies.html">Movies</a><a href="https://dramakan.netlify.app/">Dramakan</a><a href="https://cinekan.netlify.app/">Cinekan</a></nav>
         <div class="header-actions">
             <div class="search-bar">
                 <i class="fas fa-search"></i>
@@ -576,9 +576,9 @@
             <i class="fas fa-home"></i>
             <span>Dramakan</span>
         </a>
-        <a href="#" class="bottom-nav-item">
-            <i class="fas fa-compass"></i>
-            <span>Discover</span>
+        <a href="https://cinekan.netlify.app/" class="bottom-nav-item">
+            <i class="fas fa-home"></i>
+            <span>Cinekan</span>
         </a>
         <a href="#trending-section" class="bottom-nav-item">
             <i class="fas fa-fire"></i>
