--- a/chainsawmanmovie1.html
+++ b/chainsawmanmovie1.html
@@ -439,7 +439,7 @@
                     <h2 class="section-title">Official Trailer</h2>
                     <div class="trailer-panel">
                         <div class="player-container">
-                            <iframe id="trailer-player" src="" title="Official Trailer Player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>
+                            <iframe id="trailer-player" src="" title="Official Trailer Player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" **allowfullscreen** loading="lazy"></iframe>
                          </div>
                     </div>
 
@@ -460,7 +460,7 @@
         <section class="watch-section" id="watch-section">
             <h2 class="current-episode-title" id="current-episode-title"></h2>
             <div class="watch-player-container">
-                <iframe id="video-player" src="" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe id="video-player" src="" allow="autoplay; fullscreen" **allowfullscreen**></iframe>
             </div>
             <div class="stream-controls">
                 <div class="panel">
