--- a/chainsawmanmovie1.html
+++ b/chainsawmanmovie1.html
@@ -512,7 +512,7 @@
                 episodeList: [
                     {
                     ep_num: 1, title: 'Full Movie: The Bomb Girl', thumbnail: 'https://i.ytimg.com/vi/aPyXOmj_0u8/sddefault.jpg',
-                    servers: { 'VidStream': 'https://hnembed.cc/embed/movie/tt30472557', 'MegaCloud': 'https://multiembed.mov/?video_id=tt30472557', 'StreamTape': 'https://multiembed.mov/?video_id=tt30472557' },
+                    servers: { 'VidStream': 'https://hnembed.cc/embed/movie/tt30472557', 'MegaCloud': 'https://www.2embed.cc/embedtv/tt30472557', 'StreamTape': 'https://www.2embed.cc/embedtv/tt30472557' },
                     downloads: { '1080p': '#', '720p': '#', '480p': '#' }
                     }
                 ],
