--- a/takopioriginalsin.html
+++ b/takopioriginalsin.html
@@ -224,8 +224,8 @@
 
             // --- EP DATA: Takopi (Simulated EP Structure) ---
             const episodeData = [
-                { number: 1, title: 'Episode 1: The Happy Alien', videoUrl: 'https://www.2embed.cc/embedtv/tt36988358&s=1&e=1', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
-                { number: 2, title: 'Episode 2: The Original Sin', videoUrl: 'https://www.2embed.cc/embedtv/tt36988358&s=1&e=2', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' }
+                { number: 1, title: 'Episode 1: The Happy Alien', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=1', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
+                { number: 2, title: 'Episode 2: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=2', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' }
             ];
             
             // --- Page Elements (Updated IDs) ---
