--- a/takopioriginalsin.html
+++ b/takopioriginalsin.html
@@ -225,8 +225,12 @@
             // --- EP DATA: Takopi (Simulated EP Structure) ---
             const episodeData = [
                 { number: 1, title: 'Episode 1: The Happy Alien', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=1', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
-                { number: 2, title: 'Episode 2: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=2', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' }
-            ];
+                { number: 2, title: 'Episode 2: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=2', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
+                { number: 3, title: 'Episode 3: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=3', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
+                { number: 4, title: 'Episode 4: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=4', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
+                { number: 5, title: 'Episode 5: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=5', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' },
+                { number: 6, title: 'Episode 6: The Original Sin', videoUrl: 'https://multiembed.mov/?video_id=tt36988358&s=1&e=6', thumbnail: 'https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1200,height=675/catalog/crunchyroll/fe04fb008e1f7efbd1ff61a73dc88de0.jpg', downloads: { '1080p': '#', '720p': '#', '480p': '#' }, subtitleUrl: '#' }
+                ];
             
             // --- Page Elements (Updated IDs) ---
             const videoPlayer = document.getElementById('video-player-iframe');
